--- a/hw3/package.json
+++ b/hw3/package.json
@@ -2,10 +2,9 @@
   "name": "hw3",
   "version": "0.0.0",
   "private": true,
-  "test":"jest --env=jsdom",
   "scripts": {
     "start": "node ./bin/www",
-    "test": "jest"
+    "test": "jest --env=jsdom"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -13,7 +12,8 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "jquery": "^3.6.3",
+    "jest-environment-jsdom": "^29.4.1",
+    "jquery": "~3.6.3",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
