--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "jade": "~1.11.0",
     "jest-environment-jsdom": "^29.4.1",
     "jquery": "~3.6.3",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.2.0"
   },
   "devDependencies": {
     "jest": "^29.4.1"
